# moses-governance

./: .gitignore  .mcp.json  001_MOSES-Plugin-Code-Review-Market-Analysis.md  002_Competitive-Landscape.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  ENTERPRISE-USE.md  LICENSE.md  LINEAGE.md  NOTICE.md  PATENT-NOTICE.md  QUICKSTART.md  README.md  SKILL-full.md  SUBMISSION-CHECKLIST.md  audit.py  cowork-global-instructions.md  cowork-memory.md  governance-schema.json  governance.md  governance.plugin  governance.py  marketplace.json  plugin.json  settings.json
.claude/: settings.json
.claude-plugin/: plugin.json
Stresstesting/: Grok.md  PLUGIN-OVERVIEW.md  REVIEW-SYNTHESIS.md  STRESS-TEST-CONCERNS.md  deepseek.md  gemini.md  gpt.md
moses-governance-mcp/: .mcp.json  COWORK-LOG.md  MCP-FROM-REVIEWS.md  MCP-SERVER-BUILD.md  README.md  pyproject.toml  requirements.txt  server.py
moses-governance-mcp/.well-known/: mcp-server-card.json
moses-governance-mcp/data/: amendments.jsonl  audit_default.jsonl  constitution.json  core_principles.json  governance_state.json
moses-governance-mcp/data/proposals/approved/: 2f59ae4e3d3e.json
moses-governance-mcp/data/proposals/pending/: 14626724a95d.json  19140fca0cca.json  6d9042e26ad9.json  a0aeaabb447e.json
moses-governance-mcp/data/proposals/rejected/: 0d982175f6fe.json  14626724a95d.json  19140fca0cca.json  6d9042e26ad9.json  a0aeaabb447e.json
moses-governance-mcp/governance/: __init__.py  audit.py  commitment.py  engine.py  meta.py  oracle.py  swarm.py
moses-governance-mcp/hooks/: post-execute.sh  pre-execute.sh
(+121 files in other folders)
