[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moses-governance-mcp"
version = "1.1.0"
description = "Constitutional governance engine for AI agents — MO§ES™"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Ello Cello LLC", email = "contact@burnmydays.com" },
]
keywords = ["mcp", "governance", "ai", "audit", "enterprise"]
dependencies = [
    "fastmcp>=0.4.0",
]

[project.scripts]
moses-governance = "server:main"

[project.urls]
Homepage = "https://mos2es.io"
Repository = "https://github.com/SunrisesIllNeverSee/moses-governance-mcp"
